# vulkan-rendering-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  cpp_style_guide.md  main.cpp  test.out
appdata/: slang.spv
lib/lib-readfile/: CMakeLists.txt  readfile.cpp  readfile.hpp
shaders/: graphics.slang  slang.spv
src/: CMakeLists.txt  app.cpp  app.hpp  main.c  main.cpp
src/General/: general.c  general.h
src/graphics/: CMakeLists.txt  vk_renderer_desc_set.cpp  vk_renderer_devices.cpp  vk_renderer_graphics_pipe.cpp  vk_renderer_init.cpp  vk_renderer_swap.cpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_device_handle.cpp  vulkan_device_handle.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_renderer_init.cpp  vulkan_renderer_setup.cpp  vulkan_renderer_swapchain.cpp
src/graphics/shaders/: graphics.slang  raytracing.slang
src/rendering/: CMakeLists.txt  graphics_pipeline.cpp  graphics_pipeline.hpp  logical_device.cpp  logical_device.hpp  render.cpp  render.hpp  swapchain.cpp  swapchain.hpp
src/vulkan/: CMakeLists.txt  render.cpp  render.hpp
tests/: CMakeLists.txt
